--- a/app/src/main/res/layout/actv_principal.xml
+++ b/app/src/main/res/layout/actv_principal.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2a2a2a">
+    android:background="#2a2a2a"
+    android:id="@+id/view_Principal">
 
 
 
