--- a/app/src/main/res/layout/actv_principal.xml
+++ b/app/src/main/res/layout/actv_principal.xml
@@ -20,16 +20,16 @@
 
     <ImageView
         android:id="@+id/Configuracion"
-        android:layout_width="74sp"
-        android:layout_height="73sp"
-        app:srcCompat="@drawable/config"
+        android:layout_width="51sp"
+        android:layout_height="50sp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="15dp"
-        android:onClick="AbrirConfiguracion"/>
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:onClick="AbrirConfiguracion"
+        app:srcCompat="@drawable/config" />
 
     <ImageView
         android:id="@+id/Switch_Linterna"
@@ -45,12 +45,11 @@
         android:layout_width="42sp"
         android:layout_height="50sp"
         app:srcCompat="@drawable/timer"
-        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/Configuracion"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="27dp"/>
+        android:layout_marginStart="15dp" />" />
 
 
 </RelativeLayout>
