--- a/app/src/main/res/layout/actv_configuracion.xml
+++ b/app/src/main/res/layout/actv_configuracion.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#2a2a2a"
-    android:id="@+id/Configuracion">
+    android:id="@+id/Configuracion"
+    tools:layout_editor_absoluteY="0dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <CheckBox
         android:id="@+id/cbColorAleatorio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="147dp"
         android:checked="true"
         android:text="Deslizar para cambiar de color"
-        android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/sbBrillo"
-        android:layout_alignStart="@+id/sbBrillo"
-        android:onClick="setCbColorAleatorio"/>
+        android:onClick="setCbColorAleatorio"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/cbCambiarBrillo"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/cbCambiarBrillo" />
 
     <CheckBox
         android:id="@+id/cbEncenderIniciarPantalla"
@@ -22,11 +27,14 @@
         android:layout_height="wrap_content"
         android:checked="false"
         android:text="Encender al iniciar"
-        android:layout_above="@+id/cbCambiarBrillo"
-        android:layout_toLeftOf="@+id/textView2"
-        android:layout_toStartOf="@+id/textView2"
-        android:layout_marginBottom="29dp"
-        android:onClick="setCbEncenderIniciarPantalla"/>
+        android:onClick="setCbEncenderIniciarPantalla"
+        android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="163dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <CheckBox
         android:id="@+id/cbEncenderIniciarFlash"
@@ -34,11 +42,14 @@
         android:layout_height="wrap_content"
         android:checked="false"
         android:text="Encender al iniciar"
-        android:layout_above="@+id/textView"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_marginBottom="12dp"
-        android:onClick="setCbEncenderIniciarFlash"/>
+        android:onClick="setCbEncenderIniciarFlash"
+        android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <CheckBox
         android:id="@+id/cbCambiarBrillo"
@@ -46,43 +57,62 @@
         android:layout_height="wrap_content"
         android:checked="true"
         android:text="Deslizar para cambiar el brillo"
-        android:layout_alignBottom="@+id/cbColorAleatorio"
-        android:layout_alignLeft="@+id/cbColorAleatorio"
-        android:layout_alignStart="@+id/cbColorAleatorio"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginBottom="54dp"
-        android:onClick="setCbCambiarBrillo"/>
+        android:onClick="setCbCambiarBrillo"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintTop_toBottomOf="@+id/cbEncenderIniciarPantalla"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/cbEncenderIniciarPantalla" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PANTALLA"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="76dp" />
+        android:textSize="20dp"
+        android:layout_marginEnd="5dp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/cbEncenderIniciarPantalla"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
         android:text="FLASH"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/cuadraditoColor"
-        android:layout_alignEnd="@+id/cuadraditoColor" />
+        android:textSize="20dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/sbBrillo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:max="100"
         android:progress="100"
-        android:layout_below="@+id/cbColorAleatorio"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignStart="@+id/textView4" />
+        android:layout_marginStart="33dp"
+        android:layout_marginEnd="16dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPorcentajeBrillo"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/tvPorcentajeBrillo"
+        app:layout_constraintTop_toTopOf="@+id/tvPorcentajeBrillo"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3"
@@ -90,69 +120,110 @@
         android:layout_height="wrap_content"
 
         android:text="Brillo al iniciar"
-        android:layout_above="@+id/tvPorcentajeBrillo"
-        android:layout_alignRight="@+id/textView6"
-        android:layout_alignEnd="@+id/textView6"
-        android:layout_marginBottom="7dp" />
+        android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/cbColorAleatorio"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <SeekBar
-        android:id="@+id/seekBar3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sbBrillo"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginTop="71dp"
-        android:layout_toLeftOf="@+id/textView2"
-        android:layout_toStartOf="@+id/textView2" />
+        android:id="@+id/skTiempoColor"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:max="5000"
+        android:progress="0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintLeft_toRightOf="@+id/tvTiempoColor"
+        android:layout_marginLeft="0dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_below="@+id/sbBrillo"
-        android:layout_marginTop="23dp"
-        android:text="Cambiar de color en 'X' tiempo" />
+        android:text="Cambiar de color en 'X' tiempo"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dejar en 0 para desactivar"
-        android:layout_below="@+id/seekBar3"
 
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
         android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/skTiempoColor" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_below="@+id/textView5"
-        android:layout_marginTop="30dp"
-        android:text="Color al iniciar" />
-
-    <LinearLayout
-        android:id="@+id/cuadraditoColor"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_centerHorizontal="true"
-        android:background="#fff"
-        android:onClick="CambiarColor"
-        android:orientation="horizontal"></LinearLayout>
+        android:text="Color al iniciar"
+        android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvPorcentajeBrillo"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/tvPorcentajeBrillo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="100%"
-        android:layout_above="@+id/textView4"
- />
+        android:layout_marginStart="16dp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tvTiempoColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0 Segs"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp" />
+
+    <LinearLayout
+        android:id="@+id/cuadraditoColor"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="16dp"
+        android:background="#FFFFFF"
+        android:onClick="CambiarColor"
+        android:orientation="horizontal"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/sbTiempoColor"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="76dp"
+        app:layout_constraintTop_toBottomOf="@+id/cbColorAleatorio"
+        android:layout_marginBottom="74dp"
+        android:layout_marginRight="16dp"></LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
