--- a/app/src/main/res/layout/actv_principal.xml
+++ b/app/src/main/res/layout/actv_principal.xml
@@ -49,7 +49,21 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp" />" />
+        android:layout_marginStart="15dp" />
+
+    <TextView
+        android:id="@+id/tvTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:text="MM:SS"
+        android:textSize="25dp"
+        android:onClick="TimerFlash"
+        android:layout_alignBottom="@+id/imageView3"
+        android:layout_toRightOf="@+id/imageView3"
+        android:layout_toEndOf="@+id/imageView3"
+        android:layout_marginBottom="8dp" />
 
 
 </RelativeLayout>
