--- a/app/src/main/res/layout/notificacion.xml
+++ b/app/src/main/res/layout/notificacion.xml
@@ -6,9 +6,10 @@
 
     <ImageView
         android:id="@+id/noti_icon"
-        android:layout_width="25dp"
+        android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
+        android:layout_margin="5dp"
 android:layout_marginLeft="5dp"
         android:background="@drawable/rayo_notif" />
 
@@ -22,14 +23,6 @@ android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Button
 
-        android:layout_gravity="center"
-        android:id="@+id/btnDesactivar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="30dp"
-        android:text="Apagar" />
 
 </LinearLayout>
